--- a/firstTime/templates/index.html
+++ b/firstTime/templates/index.html
@@ -7,48 +7,13 @@
     <title>{{title}}</title>
 </head>
 <body>
+  
+  {% include "nav.html" %}
 
-    {% include "nav.html" %}
-    <h6 class="main">Welcome to my website</h6>
-      <h1>{{data}}</h1>   
-      
-      <!-- for loop -->
-
-      {% for item in list %}
-          <div>{{item}}</div>
-      {% endfor %}
-
-   
-
-      <table border="1" cellpadding="10">
-        <tr>
-          <th>Name</th>
-          <th>Contact</th>
-        </tr>
-        {% for d in student_details %}
-        <tr>
-          <td>{{d.name}}</td>
-          <td>{{d.phone}}</td>
-        </tr>
-        {% endfor %}
-      </table>
-
-      <!-- if else -->
-
-      {% if number|length > 0 %}
-
-          {% for n in number %}
-               
-             {% if n > 20 %}
-               <div> {{n}} </div>
-             {% endif %}
-
-          {% endfor %}
-       {% else %}
-           not found
-
-      {% endif %}
-
+  {% block content %}
+    
+  {% endblock content %}
+  
   {% include "footer.html" %}
 </body>
 </html>
